# k-nucleotide-benchmark

./: README.md  k-nucleotide-benchmark.cabal
app/: Main.hs
bench/: Bench.hs
src/: Nucleotide.hs  NucleotideOld.hs
