cabal-version:      3.0
category:           Control
build-type:         Simple
name:               k-nucleotide-benchmark
version:            0.1.0
author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
copyright:          2020
license:            BSD-3-Clause

executable knb
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:
    -threaded -rtsopts -Wall -Wincomplete-patterns -rtsopts
    -with-rtsopts=-N

  hs-source-dirs:   app/
  build-depends:
    , base
    , bytestring
    , Nucleotide

extra-source-files:

library Nucleotide
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , containers
    , hashtables
    , text
    , unordered-containers

  exposed-modules:
    Nucleotide
    NucleotideOld

  other-modules:
  default-language: Haskell2010

benchmark bench
  default-language: Haskell2010
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -Wall -Wincomplete-patterns
  hs-source-dirs:   bench
  build-depends:
    , base
    , bytestring
    , criterion
    , Nucleotide

  other-modules:
