cabal-version:      3.0
category:           Control
build-type:         Simple

name:               k-nucleotide-benchmark
version:            0.1.0

author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
copyright:          2020
license:            BSD-3-Clause

executable knb
  default-language: Haskell2010

  main-is:
    Main.hs

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-T
    -Wall
    -Wincomplete-patterns
    -rtsopts
    -with-rtsopts=-N
    -fllvm
    -eventlog

  hs-source-dirs:
    app/

  build-depends:
      base
    , Nucleotide
    , bytestring


extra-source-files:

Library Nucleotide

  hs-source-dirs:
    src

  ghc-options:
    -Wall
    -fllvm
    -O2
    -eventlog
    -fspec-constr


  build-depends:
      base
    , bytestring
    , hashtables
    , containers
    , unordered-containers
    , text
    , parallel-io
    , hashable
    , text-builder
    , vector
    , vector-algorithms

  exposed-modules:
    NucleotideOld
    Nucleotide
    NucleotideVector

  other-modules:

  default-language: Haskell2010

benchmark bench

  default-language:
    Haskell2010

  main-is:
    Bench.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -Wall
    -Wincomplete-patterns


  hs-source-dirs:
    bench

  build-depends:
    , base
    , criterion
    , Nucleotide
    , bytestring

  other-modules: